# wiringPiLite

./: .gitignore  CMakeLists.txt  README.md  build.sh  cmake_install.cmake
inc/: ads1115.h  lcd.h  mcp23017.h  mcp23x0817.h  pcf8574.h  wiringPi.h  wiringPiI2C.h
src/: ads1115.c  lcd.c  mcp23017.c  pcf8574.c  softPwm.c  softTone.c  wiringPi.c  wiringPiI2C.c  wiringSerial.c
